js/js.translator/testData/incremental/invalidation/suspendFunctionsWithCrossModuleInliner/lib1/l1.2.kt
suspend fun fooX() = 11
suspend inline fun fooY() = 22
